--- a/views/body.jade
+++ b/views/body.jade
@@ -2,7 +2,7 @@
 //- This file provides the HTML body part.
 
 body
-  h1 Welcome to BlueMix!
+  h1 Welcome to BlueMix, Jason!!
     h2= 'This application is powered by NodeJS (version ' + process.version + ') on ' + process.platform + ' platform.'
     table(border="0", cellspacing="0", cellpadding="0")
       thead
