--- a/views/body.jade
+++ b/views/body.jade
@@ -17,3 +17,4 @@ body
               //- If the value is JSON, print it in a prettier format.
               pre= /^{/.test(val) ? JSON.stringify(JSON.parse(val), null, '  ') : val
 
+<h3><why note</h3>
