--- a/views/head.jade
+++ b/views/head.jade
@@ -2,7 +2,13 @@
 //- This file provides the HTML head part
 
 head
-  title NodeJS Starter Application
+  title Minecraft Server Manager
   meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
   link(rel="stylesheet", href="/stylesheets/style.css")
+  link(rel="stylesheet", href="/stylesheets/bootstrap-theme.min.css")
+  link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+
+  script(src="/javascripts/jquery-2.1.1.min.js")
+  script(src="/javascripts/utils.js")
+
 
