--- a/views/head.jade
+++ b/views/head.jade
@@ -7,6 +7,8 @@ head
   link(rel="stylesheet", href="/stylesheets/style.css")
   link(rel="stylesheet", href="/stylesheets/bootstrap-theme.min.css")
   link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
+  link(rel="stylesheet", href="/stylesheets/font-awesome.min.css")
+  
 
   script(src="/javascripts/jquery-2.1.1.min.js")
   script(src="/javascripts/utils.js")
