--- a/views/main.html
+++ b/views/main.html
@@ -1,8 +1,10 @@
+<body>
 <!-- Static navbar -->
 <div class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Minecraft Server Manager</a>
+      <!-- a class="navbar-brand" href="#"><img src="images/minecraft-log.png" style="width:200px"> Server Manager</a-->
+      <img id="minecraft-image" src="images/minecraft-log.png"><span class="page-title">Server Manager</span>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -39,3 +41,4 @@
     <p>Awesome Apps &copy; 2014</p>
   </div>
 </div>
+</body>
