--- a/views/main.html
+++ b/views/main.html
@@ -33,9 +33,7 @@
   </table>
 
   <div id="minecraft-data-table-title">Minecraft Server Console</div>
-  <div id="console">
-    
-  </div>
+  <div id="console"></div>
   
   <div class="footer">
     <p>Awesome Apps &copy; 2014</p>
